--- a/app/src/main/res/layout/list_item_term.xml
+++ b/app/src/main/res/layout/list_item_term.xml
@@ -5,13 +5,17 @@
 
     <data>
 
-
+        <variable name="term"
+                  type="com.example.coursecatalog.database.TermEntity"/>
+        <variable name="clickListener"
+                  type="com.example.coursecatalog.terms.TermAdapter.TermListener"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> clickListener.onClick(term)}">
 
 
         <TextView
@@ -23,7 +27,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:termTitleFormatted="@{term}"/>
         <TextView
                 android:text="to"
                 android:layout_width="wrap_content"
@@ -40,7 +45,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/end_text"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="@dimen/small_margin"/>
+                android:layout_marginEnd="@dimen/small_margin"
+                app:startDateFormatted="@{term}"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
@@ -51,6 +57,7 @@
                 android:layout_marginTop="@dimen/small_margin"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="@dimen/small_margin"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:endDateFormatted="@{term}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
