--- a/app/src/main/res/layout/fragment_term_detail.xml
+++ b/app/src/main/res/layout/fragment_term_detail.xml
@@ -13,8 +13,11 @@
             android:layout_height="match_parent"
             tools:context=".terms.TermDetailFragment"
     >
-        <TextView
+        <EditText
                 android:text="Term Title"
+                android:maxLines="1"
+                android:lines="1"
+                android:maxLength="20"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +26,8 @@
                 app:termTitleFormatted="@{termDetailViewModel.term}"
                 android:layout_marginStart="@dimen/small_margin" android:textStyle="bold"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:inputType="textShortMessage"
+                android:hint="@string/term_title_hint"/>
         <TextView
                 android:text="Start Date"
                 android:layout_width="wrap_content"
@@ -52,5 +56,14 @@
                 app:layout_constraintTop_toTopOf="@id/of_text"
                 app:layout_constraintStart_toEndOf="@id/of_text"
                 android:layout_marginStart="@dimen/small_margin"/>
+        <Button
+                android:text="@string/save_term_button_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/term_save_button"
+                app:layout_constraintTop_toBottomOf="@+id/of_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="@dimen/medium_margin"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
