--- a/app/src/main/res/layout/fragment_term_detail.xml
+++ b/app/src/main/res/layout/fragment_term_detail.xml
@@ -26,9 +26,10 @@
                 app:termTitleFormatted="@{termDetailViewModel.term}"
                 android:layout_marginStart="@dimen/small_margin" android:textStyle="bold"
                 android:layout_marginTop="@dimen/medium_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:inputType="textShortMessage"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:inputType="textShortMessage"
                 android:hint="@string/term_title_hint"/>
-        <TextView
+        <EditText
                 android:text="Start Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,33 +38,60 @@
                 app:layout_constraintTop_toBottomOf="@id/term_title"
                 app:startDateFormatted="@{termDetailViewModel.term}"
                 android:layout_marginStart="@dimen/small_margin"
-                android:layout_marginTop="@dimen/medium_margin"/>
-        <TextView
-                android:text="to"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/of_text"
-                app:layout_constraintTop_toTopOf="@id/start_date_text"
-                app:layout_constraintStart_toEndOf="@+id/start_date_text"
-                android:layout_marginStart="@dimen/small_margin"/>
-        <TextView
+                android:layout_marginTop="@dimen/medium_margin"
+                android:hint="@string/enter_start_date_hint"
+                android:inputType="date"/>
+        <EditText
                 android:text="End Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/end_date_text"
+                app:layout_constraintStart_toStartOf="parent"
                 app:endDateFormatted="@{termDetailViewModel.term}"
-                app:layout_constraintLeft_toRightOf="@id/of_text"
-                app:layout_constraintTop_toTopOf="@id/of_text"
-                app:layout_constraintStart_toEndOf="@id/of_text"
-                android:layout_marginStart="@dimen/small_margin"/>
+                android:layout_marginStart="@dimen/small_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                android:hint="@string/enter_end_date_hint"
+                app:layout_constraintTop_toBottomOf="@+id/start_date_text"
+                android:inputType="date"/>
         <Button
                 android:text="@string/save_term_button_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/term_save_button"
-                app:layout_constraintTop_toBottomOf="@+id/of_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/small_margin"
+                android:layout_marginTop="@dimen/medium_margin"
+                app:layout_constraintTop_toBottomOf="@+id/end_date_text"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/term_course_list"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/course_add_button"
+                android:src="@android:drawable/ic_input_add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/term_course_list"
+                android:onClick="@{() -> termDetailViewModel.onNavigateToCoursePicker()}"/>
+        <TextView
+                android:text="Courses for This Term"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/term_save_button"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="@dimen/medium_margin"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
