--- a/app/src/main/res/layout/list_item_course.xml
+++ b/app/src/main/res/layout/list_item_course.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
-
+<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-
-        <variable name="term"
-                  type="com.example.coursecatalog.database.TermEntity"/>
+        <variable name="course"
+                  type="com.example.coursecatalog.database.CourseEntity"/>
         <variable name="clickListener"
-                  type="com.example.coursecatalog.terms.TermAdapter.TermListener"/>
+                  type="com.example.coursecatalog.courses.CourseAdapter.CourseListener"/>
+        <variable name="isPicker" type="Boolean"/>
     </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> clickListener.onClick(term)}">
+            android:id="@+id/linearLayout"
+            android:onClick="@{() -> clickListener.onClick(course)}">
 
         <TextView
-                android:text="TextView"
-                android:id="@+id/title_text"
+                android:text="Course Title"
+                android:textStyle="bold"
+                android:id="@+id/course_title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -28,37 +26,42 @@
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 app:layout_constraintTop_toTopOf="parent"
-                app:termTitleFormatted="@{term}"/>
-        <TextView
-                android:text="to"
-                android:id="@+id/to_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/end_text"
-                android:layout_marginEnd="@dimen/small_margin"/>
+                app:courseTitleFormatted="@{course}"/>
         <TextView
                 android:text="End Date"
-                android:id="@+id/end_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/course_end_date_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="@dimen/small_margin"
-                app:startDateFormatted="@{term}"/>
+                android:layout_marginTop="@dimen/small_margin"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:courseEndDateFormatted="@{course}"/>
         <TextView
-                android:text="Start Date"
-                android:id="@+id/start_text"
+                android:text="to"
+                android:id="@+id/course_to_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@+id/to_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/course_end_date_text"
+                android:layout_marginEnd="@dimen/small_margin"
+                android:layout_marginTop="@dimen/small_margin"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="@dimen/small_margin"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+                android:text="Start Date"
+                android:id="@+id/course_start_date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@+id/course_to_text"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="@dimen/small_margin"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:endDateFormatted="@{term}"/>
+                app:courseStartDateFormatted="@{course}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
