--- a/app/src/main/res/layout/fragment_course_picker.xml
+++ b/app/src/main/res/layout/fragment_course_picker.xml
@@ -19,14 +19,6 @@
                 android:layout_marginTop="@dimen/small_margin"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="@dimen/small_margin"
                 android:textStyle="bold" android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:src="@android:drawable/ic_input_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:id="@+id/floatingActionButton" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/choose_course_text"/>
         <TextView
                 android:text="@string/choose_course_instructions_text"
                 android:layout_width="wrap_content"
@@ -42,8 +34,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:layout_marginTop="@dimen/small_margin"/>
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
