--- a/app/src/main/res/layout/list_item_assessment.xml
+++ b/app/src/main/res/layout/list_item_assessment.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="course"
-                  type="com.example.coursecatalog.database.CourseEntity"/>
+        <variable name="assessment"
+                  type="com.example.coursecatalog.database.Assessment"/>
         <variable name="clickListener"
-                  type="com.example.coursecatalog.courses.CourseAdapter.CourseListener"/>
+                  type="com.example.coursecatalog.assessments.AssessmentAdapter.AssessmentListener"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout"
-            android:onClick="@{() -> clickListener.onClick(course)}">
+            android:onClick="@{() -> clickListener.onClick(assessment)}">
 
         <TextView
-                android:text="Course Title"
+                android:id="@+id/assessment_title_text"
+                app:assessmentTitle="@{assessment}"
+                android:text=""
+                tools:text="Assessment Title"
                 android:textStyle="bold"
-                android:id="@+id/course_title_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -24,23 +26,23 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
-                app:layout_constraintTop_toTopOf="parent"
-                app:courseTitleFormatted="@{course}"/>
+                app:layout_constraintTop_toTopOf="parent"/>
         <TextView
-                android:text="End Date"
+                android:id="@+id/assessment_due_date"
+                app:assessmentDueDate="@{assessment}"
+                android:text=""
+                tools:text="Due Date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/assessment_due_date"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:layout_marginTop="@dimen/small_margin"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:courseEndDateFormatted="@{course}"/>
+                app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
-                android:text="to"
-                android:id="@+id/course_to_text"
+                android:id="@+id/due_text"
+                android:text="@string/due_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -51,16 +53,16 @@
                 android:layout_marginBottom="@dimen/small_margin"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         <TextView
-                android:text="Start Date"
-                android:id="@+id/course_start_date_text"
+                android:id="@+id/assessment_type"
+                app:assessmentType="@{assessment}"
+                android:textStyle="italic"
+                tools:text="objective"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toStartOf="@+id/course_to_text"
-                android:layout_marginEnd="@dimen/small_margin"
-                android:layout_marginTop="@dimen/small_margin"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="@dimen/small_margin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:courseStartDateFormatted="@{course}"/>
+                app:layout_constraintStart_toEndOf="@+id/assessment_title_text"
+                android:layout_marginStart="@dimen/medium_margin" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
